# stringalign

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  LICENSE  README.md  pylock.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump_version.yml  publish-docs.yml  publish.yml  test.yml
docs/: Makefile
docs/source/: bibliography.bib  conf.py  examples.rst  index.rst  installation.rst  sg_execution_times.rst  worked_example.ipynb
docs/source/_static/: style.css
docs/source/api/: align.rst  evaluation.rst  index.rst  normalize.rst  statistics.rst  tokenize.rst  visualize.rst
docs/source/concepts/: cer_wer_ter.rst  confusables.rst  grapheme_clusters.rst  index.rst  levenshtein.rst  sequence_alignment.rst  unicode_normalization.rst
docs/source/data/: transcription.json
examples/compare_transcription_eval_tools/: README.md  check_for_multi_codepoint_grapheme_clusters.py  hip21_get_data.py  hip21_get_results.py  hip21_run_analysis.sh  synthetic_emoji_get_results.py  synthetic_emoji_make_data.sh  synthetic_emoji_run_analysis.sh
examples/compare_transcription_eval_tools/calamari/: evaluate.py  run_calamari.Dockerfile  run_calamari.py  run_calamari.sh  textprocessors.py
examples/compare_transcription_eval_tools/dinglehopper/: container_script.sh  run_dinglehopper.Dockerfile  run_dinglehopper.sh
examples/compare_transcription_eval_tools/isri/: run_isri.Dockerfile  run_isri.sh  run_isri_analysis.py
examples/compare_transcription_eval_tools/jiwer/: run_jiwer.Dockerfile  run_jiwer.py  run_jiwer.sh
examples/compare_transcription_eval_tools/meeteval/: run_meeteval.Dockerfile  run_meeteval.py  run_meeteval.sh
examples/compare_transcription_eval_tools/ocrevalUAtion/: container_script.sh  run_ocrevalUAtion.Dockerfile  run_ocrevalUAtion.sh
examples/compare_transcription_eval_tools/stringalign/: run_stringalign.Dockerfile  run_stringalign.py  run_stringalign.sh
examples/notebooks/: evaluate_norhand_ocr.ipynb  evaluation_example.ipynb
examples/notebooks/data/: riksarkivet.jsonl
examples/scripts/: GALLERY_HEADER.rst  plot_cer.py  plot_character_spesific_scores.py  plot_custom_confusables.py  plot_custom_visualize_style.py  plot_emoji_ocr_evaluation.py  plot_most_common_errors.py  plot_page_and_alto_xml.py  plot_sampling_alignments.py  plot_stemmer.py  plot_tokenizations.py  plot_visualize.py
examples/scripts/emoji_ocr_evaluation_data/: lines.json
examples/scripts/synthetic_transcription_data/: README.md  predicted.alto.xml  predicted.page.xml  predicted.txt  reference.txt
licenses/: README.md
python/stringalign/: __init__.py  _stringutils.pyi  align.py  classification.py  compat.py  evaluate.py  evaluation.py  normalize.py  statistics.py  tokenize.py  unicode.py  utils.py  visualize.py
python/stringalign/assets/: stylesheet.css
python/stringalign/error_classification/: case_error.py  confusable_error.py  diacritic_error.py  duplication_error.py
python/stringalign/unicode_data/: confusables.json  confusables.txt  intentional.json  intentional.txt
scripts/: align.py
src/: lib.rs
src/stringalign/: __init__.py  align.py  statistics.py
tests/: conftest.py  strategies.py  utils.py
tests/align/: test_aggregate_alignment.py  test_aggregate_character_alignment.py  test_align_strings.py  test_character_align_strings.py  test_combine_alignment_ops.py  test_create_cost_matrix.py  test_find_all_alignments.py  test_levenshtein_distance.py
tests/align/Delete/: test_delete.py
tests/align/Deleted/: test__str__.py  test_deleted.py
tests/align/Insert/: test_insert.py
tests/align/Inserted/: test__str__.py  test_inserted.py
tests/align/Keep/: test_keep.py
tests/align/Kept/: test__str__.py  test_kept.py
tests/align/Replace/: test_replace.py
tests/align/Replaced/: test__str__.py  test_replaced.py
tests/error_classification/case_error/: test_count_case_errors.py
tests/error_classification/confusable_error/: test_count_confusable_errors.py
tests/error_classification/diacritic_error/: test_check_diacritic_errors.py  test_count_diacritic_errors.py
tests/error_classification/duplication_error/: test_check_ngram_duplication_errors.py  test_get_all_n_batches.py  test_get_all_n_run_length_encodings.py  test_get_offsetted_batched.py  test_run_length_encode.py
tests/evaluation/: test_check_horizontal_segmentation_error.py  test_check_operation_for_case_error.py  test_join_windows.py
tests/evaluation/AlignmentAnalyzer/: test__repr__.py  test_compute_ter.py  test_from_strings.py  test_visualize.py
tests/evaluation/FrozenDict/: test__contains__.py  test__delitem__.py  test__hash__.py  test__init__.py  test__len__.py  test__repr__.py  test__setitem__.py
tests/evaluation/LineError/: test_from_strings.py  test_visualize.py
tests/evaluation/MultiAlignmentAnalyzer/: test__repr__.py  test_aligned_analyzer_index.py  test_alignment_operation_counts.py  test_dump.py  test_edit_counts.py  test_edit_type_index.py  test_false_negative_index.py  test_false_negative_lookup.py  test_false_positive_index.py  test_false_positive_lookup.py  test_line_error_aggregated_lookup.py  test_line_error_raw_lookup.py
tests/evaluation/TranscriptionEvaluator/: test_false_negative_lookup.py  test_false_positive_lookup.py  test_line_error_aggregated_lookup.py  test_line_error_raw_lookup.py
tests/normalize/: test_normalize_whitespace.py  test_remove_non_word_characters.py  test_remove_whitespace.py  test_resolve_confusables.py
tests/normalize/StringNormalizer/: test__call__.py  test__repr__.py
tests/statistics/: test__is_combined_alignment.py
tests/statistics/ConfusionMatrix/: conftest.py  test_add.py  test_compute_f1_score.py  test_compute_positive_predictive_value.py  test_compute_token_error_rate.py  (+5 more)
tests/tokenize/: test_add_join.py
tests/visualize/: test_base64_encode_image.py  test_compress_css.py  test_create_alignment_html.py  test_create_alignment_stylesheet.py  test_create_html_image.py
unicode_downloader/: setup_unicode_data.py
(+26 files in other folders)
