[package]
name = "stringalign"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stringalign"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22"
pyo3 = { version = "0.22.4", features = ["extension-module"] }
unicode-segmentation = "1.12.0"

[package.metadata.clippy]
deny = ["clippy::all", "clippy::pedantic", "clippy::cargo"]
