[project]
name = "stringalign"
description = "Align strings and compute evaluation metrics"
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
    {name = "Marie Roald", email = "roald.marie@gmail.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.1.1",
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stringalign._stringutils"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.7",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
    "pytest-cov>=5.0.0",
    "ipython>=8.27.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "TCH"]

[tool.mypy]
ignore-missing-imports = true

[tool.cibuildwheel]
build = "*"
skip = ""
test-skip = ""
free-threaded-support = true

archs = ["all"]
build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = 0

before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh"
