[project]
name = "stringalign"
description = "Align strings and compute evaluation metrics"
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
    {name = "Marie Roald", email = "roald.marie@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.1.1",
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stringalign._stringutils"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.7",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
    "pytest-cov>=5.0.0",
    "ipython>=8.27.0",
    "Levenshtein>=0.26.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "TCH"]

[tool.mypy]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.0.1"

parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

search = "\nversion = \"{current_version}\""
replace = "\nversion = \"{new_version}\""

commit = true
message = "Bump version: {current_version} → {new_version}"

tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "Cargo.toml"
