[project]
name = "stringalign"
description = "Align strings and compute evaluation metrics"
authors = [
    {name = "Yngve Mardal Moe", email = "yngve.m.moe@gmail.com"},
    {name = "Marie Roald", email = "roald.marie@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.1.1",
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stringalign._stringutils"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "TC"]
ignore = ["TC006"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["examples/", "docs/_build/"]

[tool.bumpversion]
current_version = "0.1.2"

parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

search = "\nversion = \"{current_version}\""
replace = "\nversion = \"{new_version}\""

commit = true
message = "Bump version: {current_version} → {new_version}"

tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "Cargo.toml"

[tool.pytest.ini_options]
addopts = "--doctest-modules --import-mode=importlib"
testpaths = ["tests", "python"]

[dependency-groups]
dev = [
    "ruff>=0.6.7",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
    "pytest-cov>=5.0.0",
    "ipython>=8.27.0",
    "Levenshtein>=0.26.0",
    "mypy>=1.13.0",
    "jiwer>=3.1.0",
    "httpx>=0.28.1",
    "networkx>=3.5",
    "pillow>=11.3.0",
]
docs = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-gallery>=0.20.0",
    "matplotlib>=3.10.8",
    "jiwer>=4.0.0",
    "nb-tokenizer>=0.1.0",
    "nltk>=3.9.2",
    "nbsphinx>=0.9.8",
]
